<resources>
    <string name="app_name">echo</string>
    <string name="my_string">Hello World App in Android</string>
    <string name="hello_world">Hello World</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home_sc">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ECHO</string>
    <string name="nav_header_subtitle">Welcome, [name]</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="empty"> </string>
    <string name="menu_home">Home</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="echo">ECHO</string>
    <string name="nav_profile">Profile</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="cur_email">Current Email</string>
    <string name="apply">Apply</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="search_song">Search song</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
</resources>