<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_contact" />
        <item android:title="@string/nav_profile">
            <menu>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/logout"/>

            </menu>
        </item>
    </group>
</menu>